fix: Use data-driven registry